concord_macros/tests/trybuild/fail/route/secret_in_host_atom.stderr
error: secret references are only allowed in credential declarations
  --> tests/trybuild/fail/route/secret_in_host_atom.rs:10:22
   |
10 |         host [secret.token]
   |                      ^^^^^
